[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"

[project]
authors = [
    {name = "Robert Huselius", email = "robert@huseli.us"},
]
license = "GPL-3.0-only"
license-files = ["LICENSE"]
name = "klaatu-python"
readme = "README.md"
requires-python = ">=3.10"
version = "2.4.0"

[project.urls]
Homepage = "https://github.com/Eboreg/klaatu-python"
Issues = "https://github.com/Eboreg/klaatu-python/issues"
Source = "https://github.com/Eboreg/klaatu-python"

[tool.ruff]
line-length = 120
target-version = "py311"
exclude = [".venv", ".git", ".mypy_cache", "__pycache__", "build", "node_modules"]

[tool.ruff.lint]
select = ["E", "F", "W", "B", "I"]
ignore = ["E722"]

[tool.ruff.lint.isort]
lines-after-imports = 2
combine-as-imports = true
default-section = "third-party"
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]

[tool.ruff.format]
skip-magic-trailing-comma = false

[tool.flake8]
max-doc-length = 79
max-line-length = 119
